[gd_scene load_steps=9 format=3 uid="uid://diohlpvbxl3oh"]

[ext_resource type="Script" path="res://globals/simple_scripts/flowgrid.gd" id="1_tr2os"]
[ext_resource type="Script" path="res://globals/utility_scenes/menus/spirit_summary/spirit_summary.gd" id="1_yovre"]
[ext_resource type="PackedScene" uid="uid://bjwcj7an8i718" path="res://globals/utility_scenes/ui_component/monster_button.tscn" id="3_okbcr"]

[sub_resource type="GDScript" id="GDScript_tlcg0"]
script/source = "extends RichTextLabel

@export var grid : GridContainer

func set_minimum_size() :
	if (grid.columns > 1) :
		autowrap_mode = TextServer.AUTOWRAP_OFF
	else :
		autowrap_mode = TextServer.AUTOWRAP_WORD_SMART

# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	set_minimum_size()
	pass # Replace with function body.

func _notification(what: int) -> void:
	match what:
		NOTIFICATION_RESIZED :
			set_minimum_size()
"

[sub_resource type="GDScript" id="GDScript_8bwty"]
script/source = "extends AspectRatioContainer

@export var grid : GridContainer
@export var minimum_size_double : Vector2
@export var minimum_size_single : Vector2

func set_minimum_size() :
	if (grid.columns > 1) :
		custom_minimum_size = minimum_size_double
	else :
		custom_minimum_size = minimum_size_single

# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	set_minimum_size()
	pass # Replace with function body.

func _notification(what: int) -> void:
	match what:
		NOTIFICATION_RESIZED :
			set_minimum_size()
"

[sub_resource type="GDScript" id="GDScript_dbube"]
script/source = "extends MarginContainer

@export var grid : GridContainer
@export var margin_left : float
@export var margin_top : float

func _set_margins() :
	if (grid.columns > 1) :
		add_theme_constant_override(\"margin_left\",margin_left)
		add_theme_constant_override(\"margin_top\",margin_top)
	else :
		add_theme_constant_override(\"margin_left\",0)
		add_theme_constant_override(\"margin_top\",0)

# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	_set_margins()
	pass # Replace with function body.


func _notification(what: int) -> void:
	match what:
		NOTIFICATION_RESIZED :
			_set_margins()
"

[sub_resource type="GDScript" id="GDScript_ea35i"]
script/source = "extends MarginContainer

@onready var grid = $\"..\"
var is_ready = false
var recall = false

func _ready() -> void:
	is_ready = true
	if recall : _on_grid_container_resized()
	recall = false

func _on_grid_container_resized() -> void:
	if not is_ready :
		recall = true
		return
	if grid.columns == 1 :
		add_theme_constant_override(\"margin_top\",10)
	else :
		add_theme_constant_override(\"margin_top\",0)
	pass # Replace with function body.
"

[sub_resource type="GDScript" id="GDScript_e6lmi"]
script/source = "extends VBoxContainer

const template = preload(\"uid://bw37jbhbgf6s0\")

signal move_selected(index : int, action : ms_action)

func set_actions(actions : Array) :
	for child in get_children() :
		remove_child(child)
		child.queue_free()
	
	for index in range(actions.size()) :
		var action = actions[index]
		var instance = template.instantiate()
		instance.set_action(action)
		add_child(instance)
		instance.pressed.connect(func (_action : ms_action) : action_pressed(index,_action))

func action_pressed(index : int, action : ms_action) :
	move_selected.emit(index,action)
"

[node name="SpiritSummary" type="Control" node_paths=PackedStringArray("label_name", "sprite", "label_type", "label_health", "label_concrete", "label_abstract", "label_defense", "label_speed", "label_luck", "move_holder", "spirit_label", "spirit_button")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yovre")
label_name = NodePath("PanelContainer/ScrollContainer/MarginContainer/GridContainer/Name")
sprite = NodePath("PanelContainer/ScrollContainer/MarginContainer/GridContainer/AspectRatioContainer/TextureRect")
label_type = NodePath("PanelContainer/ScrollContainer/MarginContainer/GridContainer/MarginContainer/GridContainer/VBoxContainer2/RichTextLabel")
label_health = NodePath("PanelContainer/ScrollContainer/MarginContainer/GridContainer/MarginContainer/GridContainer/VBoxContainer2/Health")
label_concrete = NodePath("PanelContainer/ScrollContainer/MarginContainer/GridContainer/MarginContainer/GridContainer/VBoxContainer2/Concrete")
label_abstract = NodePath("PanelContainer/ScrollContainer/MarginContainer/GridContainer/MarginContainer/GridContainer/VBoxContainer2/Abstract")
label_defense = NodePath("PanelContainer/ScrollContainer/MarginContainer/GridContainer/MarginContainer/GridContainer/VBoxContainer2/Defense")
label_speed = NodePath("PanelContainer/ScrollContainer/MarginContainer/GridContainer/MarginContainer/GridContainer/VBoxContainer2/Speed")
label_luck = NodePath("PanelContainer/ScrollContainer/MarginContainer/GridContainer/MarginContainer/GridContainer/VBoxContainer2/Luck")
move_holder = NodePath("PanelContainer/ScrollContainer/MarginContainer/GridContainer/MarginContainer/GridContainer/MarginContainer/VBoxContainer/MoveHolder")
spirit_label = NodePath("PanelContainer/ScrollContainer/MarginContainer/GridContainer/MarginContainer/GridContainer/VBoxContainer2/EquipLabel")
spirit_button = NodePath("PanelContainer/ScrollContainer/MarginContainer/GridContainer/MarginContainer/GridContainer/VBoxContainer2/MonsterButton")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 30

[node name="GridContainer" type="GridContainer" parent="PanelContainer/ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2
script = ExtResource("1_tr2os")
min_size = 400.0
max_columns = 2

[node name="Name" type="RichTextLabel" parent="PanelContainer/ScrollContainer/MarginContainer/GridContainer" node_paths=PackedStringArray("grid")]
custom_minimum_size = Vector2(50, 10)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
fit_content = true
autowrap_mode = 0
script = SubResource("GDScript_tlcg0")
grid = NodePath("..")

[node name="Control" type="Control" parent="PanelContainer/ScrollContainer/MarginContainer/GridContainer"]
layout_mode = 2

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="PanelContainer/ScrollContainer/MarginContainer/GridContainer" node_paths=PackedStringArray("grid")]
custom_minimum_size = Vector2(400, 400)
layout_mode = 2
script = SubResource("GDScript_8bwty")
grid = NodePath("..")
minimum_size_double = Vector2(400, 400)
minimum_size_single = Vector2(0, 400)

[node name="TextureRect" type="TextureRect" parent="PanelContainer/ScrollContainer/MarginContainer/GridContainer/AspectRatioContainer"]
layout_mode = 2
stretch_mode = 6

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/ScrollContainer/MarginContainer/GridContainer" node_paths=PackedStringArray("grid")]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_bottom = 20
script = SubResource("GDScript_dbube")
grid = NodePath("..")
margin_left = 10.0

[node name="GridContainer" type="GridContainer" parent="PanelContainer/ScrollContainer/MarginContainer/GridContainer/MarginContainer"]
layout_mode = 2
script = ExtResource("1_tr2os")
min_size = 400.0
max_columns = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/ScrollContainer/MarginContainer/GridContainer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EquipLabel" type="Label" parent="PanelContainer/ScrollContainer/MarginContainer/GridContainer/MarginContainer/GridContainer/VBoxContainer2"]
layout_mode = 2
text = "TR_SUMMARY_EQUIP"

[node name="MonsterButton" parent="PanelContainer/ScrollContainer/MarginContainer/GridContainer/MarginContainer/GridContainer/VBoxContainer2" instance=ExtResource("3_okbcr")]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/ScrollContainer/MarginContainer/GridContainer/MarginContainer/GridContainer/VBoxContainer2"]
layout_mode = 2
bbcode_enabled = true
fit_content = true

[node name="Health" type="RichTextLabel" parent="PanelContainer/ScrollContainer/MarginContainer/GridContainer/MarginContainer/GridContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
fit_content = true

[node name="Concrete" type="RichTextLabel" parent="PanelContainer/ScrollContainer/MarginContainer/GridContainer/MarginContainer/GridContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
fit_content = true

[node name="Abstract" type="RichTextLabel" parent="PanelContainer/ScrollContainer/MarginContainer/GridContainer/MarginContainer/GridContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
fit_content = true

[node name="Defense" type="RichTextLabel" parent="PanelContainer/ScrollContainer/MarginContainer/GridContainer/MarginContainer/GridContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
fit_content = true

[node name="Speed" type="RichTextLabel" parent="PanelContainer/ScrollContainer/MarginContainer/GridContainer/MarginContainer/GridContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
fit_content = true

[node name="Luck" type="RichTextLabel" parent="PanelContainer/ScrollContainer/MarginContainer/GridContainer/MarginContainer/GridContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
fit_content = true

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/ScrollContainer/MarginContainer/GridContainer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
script = SubResource("GDScript_ea35i")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/ScrollContainer/MarginContainer/GridContainer/MarginContainer/GridContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ActionsLabel" type="Label" parent="PanelContainer/ScrollContainer/MarginContainer/GridContainer/MarginContainer/GridContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "TR_SUMMARY_ACTION"

[node name="MoveHolder" type="VBoxContainer" parent="PanelContainer/ScrollContainer/MarginContainer/GridContainer/MarginContainer/GridContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 5
script = SubResource("GDScript_e6lmi")

[connection signal="resized" from="PanelContainer/ScrollContainer/MarginContainer/GridContainer/MarginContainer/GridContainer" to="PanelContainer/ScrollContainer/MarginContainer/GridContainer/MarginContainer/GridContainer/MarginContainer" method="_on_grid_container_resized"]
[connection signal="pressed_option" from="PanelContainer/ScrollContainer/MarginContainer/GridContainer/MarginContainer/GridContainer/VBoxContainer2/MonsterButton" to="." method="_on_monster_button_pressed_option"]
[connection signal="move_selected" from="PanelContainer/ScrollContainer/MarginContainer/GridContainer/MarginContainer/GridContainer/MarginContainer/VBoxContainer/MoveHolder" to="." method="_on_move_holder_move_selected"]
